Migrate to docker-java